--- a/retype.yml
+++ b/retype.yml
@@ -16,4 +16,5 @@ footer:
       link : https://bimasoft.web.id/
 meta:
   title: " | Manual Bimasoft"
-  
+edit:
+  repo: "https://vscode.dev/github/yokowasis/wiki-bimasoft/"
