--- a/retype.yml
+++ b/retype.yml
@@ -9,6 +9,9 @@ branding:
 links:
 - text: Client Area
   link: https://client.bimasoft.web.id/
+- text: Telegram
+  link: https://t.me/bimasoftwebid
+  icon: "https://img.icons8.com/material-outlined/24/000000/telegram-app.png"
 footer:
   copyright: "&copy; Copyright Bimasoft {{ year }}. All rights reserved."
   links:
