--- a/retype.yml
+++ b/retype.yml
@@ -1,6 +1,6 @@
 input: .
 output: build
-url: https://yokowasis.github.io/wiki-bimasoft/
+url: https://docs.bimasoft.web.id/
 branding:
   title: Wiki Bimasoft
   label: Manual
