--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Publish Retype powered website to GitHub Pages
+name: Manual Build Retype
 on:
   workflow_dispatch:
   push:
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  publish:
-    name: Publish to retype branch
+  build:
+    name: Buld Retype powered website
 
     runs-on: ubuntu-latest
 
@@ -15,10 +15,39 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - uses: retypeapp/action-build@latest
-
-      - uses: retypeapp/action-github-pages@latest
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          update-branch: true
+          node-version: 20
+          cache: 'npm'        
+
+      - name: Install OpenSSL 1.1
+        run: |
+          wget http://security.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2.23_amd64.deb
+          sudo dpkg -i libssl1.1_1.1.1f-1ubuntu2.23_amd64.deb          
+
+      - name: Install retypeapp
+        run: npm install retypeapp
+
+      - name: Build project
+        run: npm run build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./build
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: https://docs.bimasoft.web.id
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
