--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment: 
+      name: github-pages
+
     permissions:
       contents: write
       pages: write
